next try to fix block height alignment

--- a/pages/base/base.css
+++ b/pages/base/base.css
@@ -660,7 +660,6 @@ input.ui-slider-input.ui-slider-no-input[orientation='semicircle'] {
   .block {
     width: 50%;
     float: left;
-    display: table; /* prevents rounding problems with 0.7em/1.3em */
   }
 }
 
@@ -678,7 +677,7 @@ input.ui-slider-input.ui-slider-no-input[orientation='semicircle'] {
 }
 
 .block .ui-collapsible-set {
-  margin: 5px 5px 13px 3px;
+  margin: 5px 6px 13px 3px;
 }
 
 .block .set-1 .ui-collapsible-content {
@@ -687,13 +686,13 @@ input.ui-slider-input.ui-slider-no-input[orientation='semicircle'] {
 }
 
 .block .set-2 .ui-collapsible-content {
-  min-height: 12.22em;
-  padding: 10px 5px 10px 5px;
+  min-height: 12em;
+  padding: 10px 5px 11px 5px;
 }
 
 .block .set-3 .ui-collapsible-content {
-  min-height: 9.94em;
-  padding: 10px 5px 10px 5px;
+  min-height: 9.5em;
+  padding: 10px 5px 12px 5px;
 }
 
 .block .ui-collapsible-set .ui-collapsible-caption {
@@ -705,15 +704,25 @@ input.ui-slider-input.ui-slider-no-input[orientation='semicircle'] {
   margin: -10px -5px -10px -5px;
 }
 
+.block h3.ui-collapsible-heading {
+  font-size: 1em;
+  height: 2.5em;
+}
+.block .ui-collapsible-heading .ui-collapsible-heading-toggle,
 .block > .ui-bar-c.ui-li-divider {
-  margin: 5px 5px 0 3px;
-  padding: .7em;
-  font-size: 0.82em;
-  /*text-align: left;*/
+  font-size: 0.819em;
+  padding-top: 0;
+  padding-bottom: 1px;
+  line-height: 2.9;
+}
+.block > .ui-bar-c.ui-li-divider {
+  margin: 5px 6px -1.3px 3px;
+  padding-bottom: 0;
+  height: 3em;
 }
 
 .block .ui-fixed {
-  margin: 0 5px 12px 3px;
+  margin: 0 6px 12px 3px;
   padding: 10px 5px 10px 5px;
   min-height: 14.5em;
 }
